[workspace]
resolver = "3"
members = []

[workspace.package]
authors = ["Luca Lorenzon"]
edition = "2024"
version = "0.1.0"


[workspace.dependencies]
config = "0.15.17"
secrecy = "0.10.3"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = {version = "1"}
derive_more = {version = "2.0.1"}
