[workspace]
resolver = "3"
members = ["todo-api-server"]

[workspace.package]
authors = ["Luca Lorenzon"]
edition = "2024"
version = "0.1.0"


[workspace.dependencies]
clap = "4.5.48"
config = "0.15.17"
secrecy = "0.10.3"
thiserror = "2.0.16"
tracing = { version="0.1.41", features=["log"]}
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"
serde = {version = "1"}
serde_json = "1.0.145"
derive_more = {version = "2.0.1", features=["full"]}
