[package]
name = "todo-api-server"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
name = "todo_api"
path = "src/lib/lib.rs"

[[bin]]
name = "todo-api-server"
path = "src/bin/main.rs"

[dependencies]
axum = "0.8.6"
clap.workspace = true
config.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json = "1.0.145"
thiserror.workspace = true
tokio = { version = "1.47.1", features = ["tracing", "rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies]
reqwest = { version="0.12.23", features=["json"]}
